https://stackoverflow.com/questions/76494972/issues-using-jdk-incubator-vector-in-a-maven-project