@@ -10,4 +10,22 @@
     </parent>
     <artifactId>core</artifactId>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.2</version>
+                <configuration>
+                    <forkMode>always</forkMode>
+                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                    <argLine>
+                        --add-modules jdk.incubator.vector
+                    </argLine>
+                </configuration>
+            </plugin>
+
+        </plugins>
+    </build>
+
 </project>
